--- a/produtos.css
+++ b/produtos.css
@@ -1,11 +1,25 @@
 header {
-    background-color: gray;
+    background-color: lightgray;
+    padding: 20px 0;
+}
+
+.caixa {
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
+
+}
+nav {
+    position: absolute;
+    top: 110px;
+    right: 0;
+    
 }
 
 nav li {
 
     display: inline;
-    margin-left: 15px;
+    margin: 0 0 0 15px;
 
 }
 
