--- a/produtos.css
+++ b/produtos.css
@@ -30,3 +30,72 @@ nav a {
     font-size: 22px;
     text-decoration: none;
 }
+
+nav a:hover {
+    color: palevioletred;
+    text-decoration: underline;
+
+}
+.produtos {
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
+    
+    
+}
+.produtos li {
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid black;
+    border-radius: 10px;
+ 
+    
+}
+
+.produtos li:hover{
+    border: 3px solid palevioletred;
+ 
+}
+
+.produtos li:active{
+    border: 5px solid purple;
+}
+
+.produtos h2{
+    font-size: 30px;
+    font-weight: bold;
+    
+}
+
+.produtos li:hover h2 {
+    font-size: 40px;
+}
+
+.descricao {
+    font-size: 18px;
+    padding: 30px 20px;
+}
+.preco {
+    font-size: 22px;
+    font-weight: bold;
+    
+}
+
+footer {
+    text-align: center;
+    background: url("bg.jpg");
+    padding: 40px 0;
+}
+
+.copyright {
+
+    color: white;
+    font-size: 13px;
+    margin: 20px 0 0;
+    
+}
