--- a/style.css
+++ b/style.css
@@ -96,17 +96,25 @@ form{
     margin: 40px 0;
 }
 
-form label {
+form label, form p {
     display: block;
     font-size: 20px;
     margin: 0 0 10px;
 }
 
-form input {
+.input-padrao {
     display: block;
     margin: 0 0 20px;
     padding: 10px 25px;
     width: 50%;
+}
+
+.titulo-atendimento{
+    margin: 20px 0 0;
+}
+
+.checkbox {
+    margin: 20px 0;
 }
 footer {
     text-align: center;
