--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ form{
     margin: 40px 0;
 }
 
-form label, form p {
+form label, legend{
     display: block;
     font-size: 20px;
     margin: 0 0 10px;
@@ -116,11 +116,43 @@ form label, form p {
 .checkbox {
     margin: 20px 0;
 }
+
+.enviar{
+    width: 40%;
+    padding: 15px 10px;
+    background-color: orange;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    transition: 1s all;
+}
+
+.enviar:hover{
+    background-color: darkorange;
+    transform: scale(1.2);
+}
+
+table{
+    margin: 20px 0 40px;
+}
+
+thead{
+    background: lightgreen;
+}
+
+td, th{
+    border: 1px solid black;
+    padding: 10px;
+}
+
 footer {
     text-align: center;
     background: url("bg.jpg");
     padding: 40px 0;
 }
+
 
 .copyright {
 
