--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
 header {
     background-color: lightgray;
     padding: 20px 0;
@@ -155,9 +159,57 @@ footer {
 
 
 .copyright {
-
     color: white;
     font-size: 13px;
     margin: 20px 0 0;
+}
+
+/*css da página iniciar*/
+.banner{
+    width:100%;
+}
+
+.titulo-principal {
+    text-align: center;
+    font-size: 2em;
+    margin: 1em 0 1em;
+    clear: left;
+}
+
+.principal p{
+    margin: 0 0 1em;
+}
+
+.principal strong{
+    font-weight: bold;
+}
+
+.principal em{
+    font-style: italic;
+}
+
+.imagembeneficios{
+    width: 60%;
     
+}
+
+.utensilios{
+    width: 120px;
+    float: left;
+    margin: 0 20px;
+}
+
+.mapa{
+    padding: 3em 0;
+}
+
+.mapa p{
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+.video{
+    width: 560px;
+    margin: 1em auto;
+
 }
