--- a/style.css
+++ b/style.css
@@ -91,8 +91,7 @@ nav a:hover {
 }
 
 main {
-    width: 940px;
-    margin: 0 auto;
+
 
 }
 
@@ -176,6 +175,13 @@ footer {
     clear: left;
 }
 
+.principal{
+    padding: 3em 0;
+    background-color: #fefefe;
+    width: 940px;
+    margin: 0 auto;
+}
+
 .principal p{
     margin: 0 0 1em;
 }
@@ -188,19 +194,47 @@ footer {
     font-style: italic;
 }
 
-.imagembeneficios{
-    width: 60%;
-    
-}
-
 .utensilios{
     width: 120px;
     float: left;
     margin: 0 20px;
 }
 
+.beneficios{
+    padding: 3em 0;
+    background-color: #888888;
+}
+
+.imagem-beneficios{
+    width: 60%;
+    
+}
+
+.conteudo-beneficios{
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-beneficios{
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.items{
+    line-height: 1.5;
+}
+
+.items:first-child{
+    font-weight: bold;
+}
+
+.items:before{
+    content: "☆";
+}
 .mapa{
     padding: 3em 0;
+    background: linear-gradient(#fefefe, #888888);
 }
 
 .mapa p{
@@ -208,8 +242,14 @@ footer {
     text-align: center;
 }
 
+.mapa-conteudo{
+    width: 940px;
+    margin: 0 auto;
+    
+}
+
 .video{
     width: 560px;
-    margin: 1em auto;
+    margin: 3em auto;
 
 }
