--- a/style.css
+++ b/style.css
@@ -173,6 +173,7 @@ footer {
     font-size: 2em;
     margin: 1em 0 1em;
     clear: left;
+    color: rgba(0,0,0,0.7)
 }
 
 .principal{
@@ -206,7 +207,14 @@ footer {
 }
 
 .imagem-beneficios{
-    width: 60%;
+    width: 60%;  
+    opacity: 1;
+    transition: 500ms;
+    box-shadow: 4px 4px 10px 3px black;
+}
+
+.imagem-beneficios:hover{
+    opacity: 0.3; 
     
 }
 
@@ -252,4 +260,20 @@ footer {
     width: 560px;
     margin: 3em auto;
 
+}
+
+@media screen and (max-width: 480px){
+    .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video{
+        width: auto;
+    }
+    h1{
+        text-align: center;
+    }
+    nav {
+        position: static;
+    }
+    .lista-beneficios, .imagem-beneficios{
+        width: 100%;
+        margin: 5px;
+    }
 }
